fix(ui): correct navbar spacing in RTL layout

--- a/frontend/src/app/components/menu/menu.component.scss
+++ b/frontend/src/app/components/menu/menu.component.scss
@@ -6,12 +6,14 @@
   position: absolute;
   top: 65px;
   transition: 0.25s;
-  box-shadow: 5px 0px 30px 0px #000;
+  box-shadow: 0 0 30px #000;
   padding-bottom: 20px;
+
   @media (max-width: 613px) {
     top: 105px;
   }
 }
+
 
 :host-context(.ltr-layout) .sidenav {
   left: -250px;
@@ -21,16 +23,6 @@
   right: -250px;
 }
 
-.ellipsis {
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.scrollable {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
 
 .sidenav.open {
   display: block;
@@ -45,30 +37,50 @@
   right: 0;
 }
 
-.sidenav a, button{
+
+.ellipsis {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.scrollable {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+
+.sidenav a,
+.sidenav button {
   text-decoration: none;
   color: lightgray;
-  margin-left: 20px;
+  margin-inline-start: 20px;
 }
+
 .sidenav a:hover {
   color: white;
 }
+
+
 .sidenav nav {
   width: 100%;
   height: calc(100vh - 65px);
   background-color: var(--bg);
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-inline: 20px;
+  padding-block: 20px;
+
   @media (max-width: 991px) {
     padding-bottom: 200px;
   }
 }
 
+
 @media screen and (max-height: 450px) {
-  .sidenav a {font-size: 18px;}
+  .sidenav a {
+    font-size: 18px;
+  }
 }
+
 
 .badge-default {
   background-color: black;
